text spacing corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,8 @@ p{
     clear:left;
     display: inline;
     clear: both;
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 
